manually calculating all gradients in loss.backward()

--- a/makemore_backprop_ninja.ipynb
+++ b/makemore_backprop_ninja.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPP7rSz6FF9Z23OOaen+bG7"
+      "authorship_tag": "ABX9TyOdPp/XWrEWnye04lMQY7iq"
     },
     "kernelspec": {
       "name": "python3",
@@ -55,7 +55,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "46f1b938-4151-48d4-a4d4-89d62948c68e"
+        "outputId": "5a859b91-3994-4ef4-9588-6b1e919b2576"
       },
       "execution_count": 3,
       "outputs": [
@@ -70,7 +70,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 113k/113k [00:00<00:00, 36.5MB/s]"
+            "100%|██████████| 113k/113k [00:00<00:00, 43.8MB/s]"
           ]
         },
         {
@@ -137,7 +137,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "niQbCUjPrAuD",
-        "outputId": "a9039905-87ab-4d7c-cf88-2bb9c6c39984"
+        "outputId": "16f5395f-f0fc-4075-9298-bbf160f00055"
       },
       "execution_count": 7,
       "outputs": [
@@ -160,7 +160,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4t-Rs9ExvDw2",
-        "outputId": "c750fe7f-0c3b-4f86-e276-0244955509de"
+        "outputId": "6f4ddf2d-aeb4-40f1-b5ce-f89d3b7571c3"
       },
       "execution_count": 8,
       "outputs": [
@@ -184,7 +184,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Bpbdik5_ne80",
-        "outputId": "73abfdf5-394e-43ee-cb26-725db9eaca24"
+        "outputId": "af06804c-7583-4eb6-bd90-0f151089d8f5"
       },
       "execution_count": 9,
       "outputs": [
@@ -240,7 +240,7 @@
       "metadata": {
         "id": "wjgYr1ucOsG3"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -256,8 +256,164 @@
       "metadata": {
         "id": "beykf3rdPGHb"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n_emb = 10\n",
+        "n_context = 3\n",
+        "n_hidden = 64\n",
+        "\n",
+        "g = torch.Generator().manual_seed(214783647)\n",
+        "C = torch.randn((vocab_size, n_emb), generator=g)\n",
+        "\n",
+        "# first layer                                           # kaiming init\n",
+        "W1 = torch.randn((n_emb * n_context, n_hidden), generator=g) * (5/3) / ((n_emb * 3) ** 0.5)\n",
+        "B1 = torch.randn(n_hidden, generator=g) * 0.1 # these biases dont do anything since we saw they get subtracted in batch normlizing but its here for fun\n",
+        "\n",
+        "# second layer\n",
+        "W2 = torch.randn((n_hidden, vocab_size), generator=g) * 0.1\n",
+        "B2 = torch.randn(vocab_size, generator=g) * 0.1\n",
+        "\n",
+        "# batchnorm params\n",
+        "bngain = torch.ones((1, n_hidden)) * 0.1 + 1.0\n",
+        "bnbias = torch.zeros((1, n_hidden)) * 0.1\n",
+        "\n",
+        "parameters = [C, W1, B1, W2, B2, bngain, bnbias]\n",
+        "print(sum(p.nelement() for p in parameters)) # number of parameters in total\n",
+        "for p in parameters:\n",
+        "  p.requires_grad = True\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gEVvGdwYgt5J",
+        "outputId": "aef9044d-8354-42c3-8c8e-c890f2afa705"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4137\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "B = 32 # batch size\n",
+        "# forward pass\n",
+        "Xb = Xtr[:B]\n",
+        "Yb = Ytr[:B]\n",
+        "\n",
+        "emb = C[Xb]\n",
+        "embcat = emb.view(emb.shape[0], -1)\n",
+        "\n",
+        "# linear layer 1\n",
+        "hprebn = embcat @ W1 + B1\n",
+        "# batch norm\n",
+        "bnmeani = 1 / emb.shape[0] * hprebn.sum(0, keepdim=True)\n",
+        "bndiff = hprebn - bnmeani\n",
+        "bndiff2 = bndiff ** 2\n",
+        "bnvar = 1 / (emb.shape[0] - 1) * bndiff2.sum(0, keepdim=True)\n",
+        "bnvar_inv = (bnvar + 1e-5) ** -0.5\n",
+        "bndiff_norm = bndiff * bnvar_inv\n",
+        "bnraw = bndiff_norm * bngain + bnbias\n",
+        "hpreact = bngain * bnraw + bnbias\n",
+        "# non linearity\n",
+        "h = torch.tanh(hpreact)\n",
+        "# second linear layer\n",
+        "logits = h @ W2 + B2\n",
+        "# cross entropy loss\n",
+        "logit_maxes = logits.max(1, keepdim=True).values\n",
+        "norm_logits = logits - logit_maxes # subtract the max so we dont get inf in counts\n",
+        "counts = norm_logits.exp()\n",
+        "counts_sum = counts.sum(1, keepdims=True)\n",
+        "counts_sum_inv = counts_sum ** -1\n",
+        "probs = counts * counts_sum_inv\n",
+        "logprobs = probs.log()\n",
+        "loss = -logprobs[range(Xb.shape[0]), Yb].mean()\n",
+        "\n",
+        "# pytorch backwards\n",
+        "for p in parameters:\n",
+        "  p.grad = None\n",
+        "\n",
+        "for t in [logprobs, probs, counts, counts_sum, counts_sum_inv,\n",
+        "          norm_logits, logit_maxes, logits, h, hpreact, bnraw,\n",
+        "          bnvar_inv, bnvar, bndiff_norm, bndiff, hprebn, bnmeani,\n",
+        "          embcat, emb]:\n",
+        "  t.retain_grad()\n",
+        "\n",
+        "loss.backward()\n",
+        "loss\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "dE2LfWUfh6tM",
+        "outputId": "a9350638-f606-4160-a7b4-beb48f026bf9"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor(3.4207, grad_fn=<NegBackward0>)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Excercise 1\n",
+        "# Calculating all of the deriatives manually to do backprop\n",
+        "\n",
+        "# L = loss\n",
+        "# dL/dL = 1\n",
+        "\n",
+        "# dL/dlogprobs\n",
+        "# loss = -(a + b + c ... ) /B\n",
+        "#      = -a/B -b/B -c/B ...\n",
+        "#      = dL/da = -1/B, dL/db = -1/B ...\n",
+        "# adding just propates the gradient\n",
+        "# dl/dlogprobs = -1/B\n",
+        "\n",
+        "dlogprobs = torch.zeros_like(logprobs)\n",
+        "dlogprobs[range(B), Yb] = -1/B\n",
+        "cmp('dlogprobs', dlogprobs, logprobs)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Pi_x-AcWjjPS",
+        "outputId": "47c4c0ee-9572-4f9a-f7ad-758e02bb2cb3"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "dlogprobs       | exact: True  | approximate: True  | maxdiff: 0.0\n"
+          ]
+        }
+      ]
     }
   ]
 }
